--- a/index.html
+++ b/index.html
@@ -7,6 +7,136 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="#structure">Day Structure</a>
+            </li>
+            <li>
+                <a href="#structure">Team</a>
+            </li>
+            <li>
+                <a href="#structure">Schedule</a>
+            </li>
+        </ul>
+
+    </nav>
     
+    <header>
+        <h1>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="IronSkydive">
+            IronSkydive
+        </h1>
+        <h2>
+            Let the trip begin
+        </h2>
+        <aside>
+            <i>"The bestexperience of our lives"</i>
+            <p>Darwin Diaz, Ironhack</p>
+        </aside>
+
+    </header>
+
+    <section id="section1">
+        <h3 id="welcome">Hello!</h3>
+        <article>Welcome to IronSkydive,he best adventure you will ever had</article>
+        <a href="#">learn more</a>
+        <h3 id="about us"></h3>
+
+        <h3 id="About us">About us!</h3>
+        <article>We like a lot programming websites but we also love to practice sports</article>
+        <a href="#">Watch video</a>
+        <h3 id="about us"></h3>
+
+        <h3 id="wanna join">Wanna join?</h3>
+        <article>Join our fitness program to be in good shape while learning.</article>
+        <a href="#">Register</a>
+        <h3 id="about us"></h3>
+    </section>
+
+    <section id="section2">
+        <h3 id="trainning">1. Trainning</h3>
+        <article>we teach all neccessary things to jump from e plane without any kind of problem</article>
+        <h3 id="about us"></h3>
+
+        <h3 id="About us">2. Get ready</h3>
+        <article>You are already prepared, you just need the suit and the parachute. All sizes available</article>
+        <h3 id="about us"></h3>
+
+        <h3 id="wanna join">3. ly</h3>
+        <article>You are ready, and the plane is waiting for us in the hangar. Let´s fly</article>
+        <h3 id="about us"></h3>
+
+        <h3 id="wanna join">4. Jump!</h3>
+        <article>You have done the most complicated . Just one step left... jump!</article>
+        <h3 id="about us"></h3>
+    </section>
+
+    <section id="section3">
+        <h3>Team</h3>
+        <div>Our tema collectively has 75 years of experience, Odds we are when you jump out of the plane with this professionals, you won´t go splan</div>
+        <article>Team memeber 1</article>
+        <article>Team memeber 2</article>
+        <article>Team memeber 3</article>
+    </section>
+
+    <section id="section4">
+        <h3>Schedule</h3>
+        <h3>Schedule a Time Slot</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Time</th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                    <th>Saturday</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>9:00 - 11:00</td>
+                    <td></td>
+                    <td></td>
+                    <td>X</td>
+                    <td></td>
+                    <td>X</td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>12:00 - 14:00</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>X</td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>15:00 - 17:00</td>
+                    <td></td>
+                    <td></td>
+                    <td>X</td>
+                    <td>X</td>
+                    <td>X</td>
+                    <td>X</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <footer>
+        <h5 id="contact">Contact information</h5>
+        <address>IronSkydive 33 Rue la Fayette, 75009 Paris, France +33 (0) 619 193 088</address>
+        <h5>Contact Information</h5>
+        <ul>
+            <li>Twitter</li>
+            <li>Facebook</li>
+            <li>Instagram</li>
+        </ul>
+
+    </footer>
 </body>
 </html>
