--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3 id="welcome">Hello!</h3>
         <article>Welcome to IronSkydive,he best adventure you will ever had</article>
         <a href="#">learn more</a>
-        <h3 id="about us"></h3>
+        <h3 id="section1></h3>
 
         <h3 id="About us">About us!</h3>
         <article>We like a lot programming websites but we also love to practice sports</article>
@@ -51,23 +51,27 @@
         <h3 id="wanna join">Wanna join?</h3>
         <article>Join our fitness program to be in good shape while learning.</article>
         <a href="#">Register</a>
-        <h3 id="about us"></h3>
+        <h3 id="wanna join"></h3>
     </section>
 
     <section id="section2">
         <h3 id="trainning">1. Trainning</h3>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"></img>
         <article>we teach all neccessary things to jump from e plane without any kind of problem</article>
         <h3 id="about us"></h3>
 
         <h3 id="About us">2. Get ready</h3>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"></img>
         <article>You are already prepared, you just need the suit and the parachute. All sizes available</article>
         <h3 id="about us"></h3>
 
         <h3 id="wanna join">3. ly</h3>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"></img>
         <article>You are ready, and the plane is waiting for us in the hangar. Let´s fly</article>
         <h3 id="about us"></h3>
 
         <h3 id="wanna join">4. Jump!</h3>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"></img>
         <article>You have done the most complicated . Just one step left... jump!</article>
         <h3 id="about us"></h3>
     </section>
@@ -75,9 +79,15 @@
     <section id="section3">
         <h3>Team</h3>
         <div>Our tema collectively has 75 years of experience, Odds we are when you jump out of the plane with this professionals, you won´t go splan</div>
-        <article>Team memeber 1</article>
-        <article>Team memeber 2</article>
-        <article>Team memeber 3</article>
+        <article>Team member 1</article>
+        <h4><b>Harol Rothstein</b></h4>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harol Rothstein"></img>
+        <article><b>Team member 2</b></article>
+        <h4><b>Susan Phillips</b></h4>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan Phillips"></img>
+        <article><b>Team member 3</b></article>
+        <h4><b>Taylor Roberts</b></h4>
+        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor Roberts"></img>
     </section>
 
     <section id="section4">
@@ -132,9 +142,9 @@
         <address>IronSkydive 33 Rue la Fayette, 75009 Paris, France +33 (0) 619 193 088</address>
         <h5>Contact Information</h5>
         <ul>
-            <li>Twitter</li>
-            <li>Facebook</li>
-            <li>Instagram</li>
+            <li><a href="https://x.com/?lang=es" target="_blank">Twitter</a></li>
+            <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
         </ul>
 
     </footer>
