--- a/index.html
+++ b/index.html
@@ -31,63 +31,83 @@
             Let the trip begin
         </h2>
         <aside>
-            <i>"The bestexperience of our lives"</i>
+            <em>"The bestexperience of our lives"</em>
             <p>Darwin Diaz, Ironhack</p>
         </aside>
 
     </header>
 
     <section id="section1">
-        <h3 id="welcome">Hello!</h3>
-        <article>Welcome to IronSkydive,he best adventure you will ever had</article>
-        <a href="#">learn more</a>
-        <h3 id="section1></h3>
+        <article>
+            <h3 id="welcome">Hello!</h3>
+            <p>Welcome to IronSkydive,he best adventure you will ever had</p>
+            <a href="#">learn more</a>
+            <h3 id="section1"></h3>
+        </article>
 
-        <h3 id="About us">About us!</h3>
-        <article>We like a lot programming websites but we also love to practice sports</article>
-        <a href="#">Watch video</a>
-        <h3 id="about us"></h3>
+        <article>
+            <h3 id="About us">About us!</h3>
+            <p>We like a lot programming websites but we also love to practice sports</p>
+            <a href="#">Watch video</a>
+            <h3 id="about us"></h3>
+        </article>
 
-        <h3 id="wanna join">Wanna join?</h3>
-        <article>Join our fitness program to be in good shape while learning.</article>
-        <a href="#">Register</a>
-        <h3 id="wanna join"></h3>
+        <article>
+            <h3 id="wanna join">Wanna join?</h3>
+            <p>Join our fitness program to be in good shape while learning.</p>
+            <a href="#">Register</a>
+            <h3 id="wanna join"></h3>
+        </article>
     </section>
 
     <section id="section2">
-        <h3 id="trainning">1. Trainning</h3>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"></img>
-        <article>we teach all neccessary things to jump from e plane without any kind of problem</article>
-        <h3 id="about us"></h3>
+        <article>
+            <h3 id="trainning">1. Trainning</h3>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"></img>
+            <p>we teach all neccessary things to jump from e plane without any kind of problem</p>
+            <h3 id="about us"></h3>
+        </article>
 
-        <h3 id="About us">2. Get ready</h3>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"></img>
-        <article>You are already prepared, you just need the suit and the parachute. All sizes available</article>
-        <h3 id="about us"></h3>
+        <article>
+            <h3 id="About us">2. Get ready</h3>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"></img>
+            <p>You are already prepared, you just need the suit and the parachute. All sizes available</p>
+            <h3 id="about us"></h3>
+        </article>
 
-        <h3 id="wanna join">3. ly</h3>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"></img>
-        <article>You are ready, and the plane is waiting for us in the hangar. Let´s fly</article>
-        <h3 id="about us"></h3>
+        <article>
+            <h3 id="wanna join">3. ly</h3>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"></img>
+            <p>You are ready, and the plane is waiting for us in the hangar. Let´s fly</p>
+            <h3 id="about us"></h3>
+        </article>
 
-        <h3 id="wanna join">4. Jump!</h3>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"></img>
-        <article>You have done the most complicated . Just one step left... jump!</article>
-        <h3 id="about us"></h3>
+        <article>
+            <h3 id="wanna join">4. Jump!</h3>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"></img>
+            <p>You have done the most complicated . Just one step left... jump!</p>
+            <h3 id="about us"></h3>
+        </article>
     </section>
 
     <section id="section3">
         <h3>Team</h3>
         <div>Our tema collectively has 75 years of experience, Odds we are when you jump out of the plane with this professionals, you won´t go splan</div>
-        <article>Team member 1</article>
+        
+        <article>
         <h4><b>Harol Rothstein</b></h4>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harol Rothstein"></img>
-        <article><b>Team member 2</b></article>
-        <h4><b>Susan Phillips</b></h4>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan Phillips"></img>
-        <article><b>Team member 3</b></article>
-        <h4><b>Taylor Roberts</b></h4>
-        <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor Roberts"></img>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg" alt="Harol Rothstein"></img>
+        </article>
+
+        <article>
+            <h4><b>Susan Phillips</b></h4>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg" alt="Susan Phillips"></img>
+        </article>
+
+        <article>
+            <h4><b>Taylor Roberts</b></h4>
+            <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg" alt="Taylor Roberts"></img>
+        </article>
     </section>
 
     <section id="section4">
@@ -139,7 +159,12 @@
 
     <footer>
         <h5 id="contact">Contact information</h5>
-        <address>IronSkydive 33 Rue la Fayette, 75009 Paris, France +33 (0) 619 193 088</address>
+        <address>
+            IronSkydive<br>
+            33 Rue la Fayette<br> 
+            75009 Paris, France<br>
+            +33 (0) 619 193 088
+        </address>
         <h5>Contact Information</h5>
         <ul>
             <li><a href="https://x.com/?lang=es" target="_blank">Twitter</a></li>
